// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`apiRequestAuth should make an authenticated request with the correct parameters 1`] = `
{
  "Accept": "application/json",
  "Authorization": "token yourAuthToken",
  "Cache-Control": "no-cache",
  "Content-Type": "application/json",
}
`;

exports[`apiRequestAuth should make an authenticated request with the correct parameters and default data 1`] = `
{
  "Accept": "application/json",
  "Authorization": "token yourAuthToken",
  "Cache-Control": "no-cache",
  "Content-Type": "application/json",
}
`;

exports[`utils/api/request.ts should make a request with the correct parameters 1`] = `
{
  "Accept": "application/json",
  "Cache-Control": "no-cache",
  "Content-Type": "application/json",
}
`;

exports[`utils/api/request.ts should make a request with the correct parameters and default data 1`] = `
{
  "Accept": "application/json",
  "Cache-Control": "no-cache",
  "Content-Type": "application/json",
}
`;
